--- a/src/app/v2/modules/landing-page/landing-page.component.html
+++ b/src/app/v2/modules/landing-page/landing-page.component.html
@@ -6,7 +6,7 @@
         <!-- Primer segmento: enlace a la página de Inicio -->
         <li class="inline-flex items-center">
           <a
-            href="/"
+            routerLink="/"
             class="inline-flex items-center text-sm font-bold transition-colors duration-300"
           >
             <!-- Icono de Inicio -->
@@ -123,7 +123,7 @@
           Podcast creados con IA, acerca de la industria 4.0 y sus tecnologías.
         </p>
         <a
-          href="/investigacion-podcasts"
+          routerLink="/investigacion-podcasts"
           class="bg-gray-800 text-white py-3 px-6 rounded-lg shadow-lg hover:shadow-xl transition duration-200"
           >Ir a Escuchar
         </a>
