--- a/src/app/v2/components/sugeridos/sugeridos.component.html
+++ b/src/app/v2/components/sugeridos/sugeridos.component.html
@@ -26,7 +26,7 @@ this.currentUser()?.rol?.nombreRol === Role.Proveedor && this.modeloCaracter())
       Registrate y completa tu modelo para obtener un resultado inteligente.
     </p>
     <a
-      href="/registro"
+      routerLink="/registro"
       class="font-bold py-2 px-4 bg-yellow-500 hover:bg-yellow-600 text-white transition duration-300 ease-in-out transform hover:scale-105"
     >
       Registrarse
@@ -279,7 +279,7 @@ this.currentUser()?.rol?.nombreRol === Role.Proveedor && this.modeloCaracter())
         <div class="py-4" style="font-size: 0.9rem">
           <p class="py-2 px-6">
             <strong>Sitio Web:</strong
-            ><a class="mx-2" href="{{ dataModal.sitioWebEmpresa }}">{{
+            ><a class="mx-2" routerLink="{{ dataModal.sitioWebEmpresa }}">{{
               dataModal.sitioWebEmpresa
             }}</a>
           </p>
