--- a/src/app/v2/modules/informe/informe.component.html
+++ b/src/app/v2/modules/informe/informe.component.html
@@ -6,7 +6,7 @@
         <!-- Primer segmento: enlace a la página de Inicio -->
         <li class="inline-flex items-center">
           <a
-            href="/"
+            routerLink="/"
             class="inline-flex items-center text-sm font-bold transition-colors duration-300"
           >
             <!-- Icono de Inicio -->
@@ -32,7 +32,7 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            href="/"
+            routerLink="/"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
             Investigacion
@@ -53,7 +53,7 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            href="/investigacion-diagnostico"
+            routerLink="/investigacion-diagnostico"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
             Diagnostico
@@ -191,7 +191,7 @@
       </div>
       <div class="mt-6 text-center">
         <a
-          href="https://drive.google.com/file/d/1Ct-dBUZZ2nejjTZ7FNbhrLr45POtNnnN/view?usp=sharing"
+          routerLink="https://drive.google.com/file/d/1Ct-dBUZZ2nejjTZ7FNbhrLr45POtNnnN/view?usp=sharing"
           class="inline-block bg-blue-600 text-white font-bold py-3 px-6 shadow-lg hover:bg-blue-700 transition duration-300"
         >
           <svg
