--- a/src/app/v2/modules/provider-search/provider-search.component.html
+++ b/src/app/v2/modules/provider-search/provider-search.component.html
@@ -6,7 +6,7 @@
         <!-- Primer segmento: enlace a la página de Inicio -->
         <li class="inline-flex items-center">
           <a
-            href="/"
+            routerLink="/"
             class="inline-flex items-center text-sm font-bold transition-colors duration-300"
           >
             <!-- Icono de Inicio -->
@@ -32,7 +32,7 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            href="/"
+            routerLink="/"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
             Buscadores
@@ -53,7 +53,7 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            href="/buscador-proveedores"
+            routerLink="/buscador-proveedores"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
             Proveedores
@@ -252,7 +252,7 @@
     <ol class="flex text-xs font-medium space-x-1 mt-5">
       <li>
         <a
-          href="/?page=1"
+          routerLink="/?page=1"
           class="inline-flex items-center justify-center w-8 h-8 border border-gray-100 rounded"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
@@ -270,26 +270,26 @@
       <li
         class="block w-8 h-8 text-center border border-gray-100 rounded leading-8"
       >
-        <a href="/?page=1" class="block">1</a>
+        <a routerLink="/?page=1" class="block">1</a>
       </li>
       <li
         class="block w-8 h-8 text-center text-white bg-blue-600 border-blue-600 rounded leading-8"
       >
-        <a href="/?page=2" class="">2</a>
+        <a routerLink="/?page=2" class="">2</a>
       </li>
       <li
         class="block w-8 h-8 text-center border border-gray-100 rounded leading-8"
       >
-        <a href="/?page=3" class="block">3</a>
+        <a routerLink="/?page=3" class="block">3</a>
       </li>
       <li
         class="block w-8 h-8 text-center border border-gray-100 rounded leading-8"
       >
-        <a href="/?page=4" class="block">4</a>
+        <a routerLink="/?page=4" class="block">4</a>
       </li>
       <li>
         <a
-          href="/?page=3"
+          routerLink="/?page=3"
           class="inline-flex items-center justify-center w-8 h-8 border border-gray-100 rounded"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
@@ -354,7 +354,7 @@
       <div class="py-4" style="font-size: 0.9rem">
         <p class="py-2 px-6">
           <strong>Sitio Web:</strong
-          ><a class="mx-2" href="{{ dataModal.sitioWebEmpresa }}">{{
+          ><a class="mx-2" routerLink="{{ dataModal.sitioWebEmpresa }}">{{
             dataModal.sitioWebEmpresa
           }}</a>
         </p>
