--- a/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
+++ b/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
@@ -6,7 +6,7 @@
         <!-- Primer segmento: enlace a la página de Inicio -->
         <li class="inline-flex items-center">
           <a
-            href="/"
+            routerLink="/"
             class="inline-flex items-center text-sm font-bold transition-colors duration-300"
           >
             <!-- Icono de Inicio -->
@@ -32,7 +32,7 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            href="/"
+            routerLink="/"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
             Proyecto
@@ -53,7 +53,7 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            href="/proyecto/equipo"
+            routerLink="/proyecto/equipo"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
             Equipo
