--- a/src/app/v2/modules/startup-search/startup-search.component.html
+++ b/src/app/v2/modules/startup-search/startup-search.component.html
@@ -250,7 +250,7 @@
       </div>
       <p style="margin-top: 0px">
         <small style="color: gray" class="text-secondary"
-          >Sitio web: {{ getDomain(item.link) }}
+          >Sitio web: {{ getDomain(item.paginaWeb) }}
         </small>
       </p>
       }
