--- a/src/app/v2/modules/project-search/project-search.component.html
+++ b/src/app/v2/modules/project-search/project-search.component.html
@@ -219,7 +219,10 @@
         (keypress.enter)="openModal($index)"
         (keypress.space)="openModal($index)"
       >
-        <a class="text-xl font-semibold text-blue-600 hover:underline">
+        <a
+          style="cursor: pointer"
+          class="text-xl font-semibold text-blue-600 hover:underline"
+        >
           {{ item.titulo }}
         </a>
 
