--- a/src/app/v2/modules/provider-search/provider-search.component.html
+++ b/src/app/v2/modules/provider-search/provider-search.component.html
@@ -220,6 +220,7 @@
         (keypress.space)="openModal($index)"
       >
         <a
+          style="cursor: pointer"
           style="margin-bottom: 12px"
           class="text-xl font-semibold text-blue-600 hover:underline"
         >
