--- a/src/app/v2/modules/startup-search/startup-search.component.html
+++ b/src/app/v2/modules/startup-search/startup-search.component.html
@@ -220,6 +220,7 @@
         (keypress.space)="openModal($index)"
       >
         <a
+          style="cursor: pointer"
           class="uppercase text-xl font-semibold text-blue-600 hover:underline"
         >
           {{ item?.nombreStartup }}
