--- a/src/app/v2/modules/form-register/form-register.component.html
+++ b/src/app/v2/modules/form-register/form-register.component.html
@@ -127,7 +127,7 @@
           Volver
         </button>
         <button
-          style="margin-left: auto"
+          style="margin-left: auto; cursor: pointer"
           class="shadow bg-indigo-600 hover:bg-indigo-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-6 rounded"
           type="submit"
           [disabled]="formGroup.invalid"
