--- a/src/app/v2/modules/informe/informe.component.html
+++ b/src/app/v2/modules/informe/informe.component.html
@@ -191,7 +191,12 @@
       </div>
       <div class="mt-6 text-center">
         <a
-          routerLink="https://drive.google.com/file/d/1Ct-dBUZZ2nejjTZ7FNbhrLr45POtNnnN/view?usp=sharing"
+          style="cursor: pointer"
+          (click)="
+            openLink(
+              'https://drive.google.com/file/d/1Ct-dBUZZ2nejjTZ7FNbhrLr45POtNnnN/view?usp=sharing'
+            )
+          "
           class="inline-block bg-blue-600 text-white font-bold py-3 px-6 shadow-lg hover:bg-blue-700 transition duration-300"
         >
           <svg
