--- a/src/app/v2/modules/project-search/project-search.component.html
+++ b/src/app/v2/modules/project-search/project-search.component.html
@@ -67,7 +67,7 @@
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Search and Results -->
   <div class="w-full lg:w-3/4 pr8 p-8">
-    <h2 class="text-2xl font-bold mb-6">Financiamiento</h2>
+    <h2 class="text-2xl font-bold mb-6">Proyectos Destacados</h2>
     <!-- Tips y Mensajes Dinámicos -->
     <div class="mb-3 position-relative" style="min-height: 1.5em">
       <h5
