Reorder suggested terms in project and startup search components

--- a/src/app/v2/modules/project-search/project-search.component.html
+++ b/src/app/v2/modules/project-search/project-search.component.html
@@ -169,11 +169,10 @@
         class="badge border border-blue-100 text-blue-600 px-2 py-1 text-xs suggested-term me-2 mb-2 text-xs"
         *ngFor="
           let term of [
-            'gemelos digitales',
             'impresión 3D',
-            'saas',
             'innovación',
-            'sostenibilidad'
+            'sostenibilidad',
+            'gemelos digitales'
           ]
         "
         (click)="addSuggestedTerm(term)"
