--- a/src/app/v2/components/sugeridos/sugeridos.component.html
+++ b/src/app/v2/components/sugeridos/sugeridos.component.html
@@ -84,7 +84,7 @@ this.currentUser()?.rol?.nombreRol === Role.Proveedor && this.modeloCaracter())
       (click)="openModal($index)"
       (keypress.enter)="openModal($index)"
       (keypress.space)="openModal($index)"
-      class="font-bold py-2 px-4 bg-blue-500 hover:bg-blue-600 text-white transition duration-300 ease-in-out transform hover:scale-105"
+      class="font-bold py-2 text-blue-500 transition duration-300 ease-in-out transform hover:scale-105"
     >
       Ver Más
     </a>
@@ -233,7 +233,7 @@ this.currentUser()?.rol?.nombreRol === Role.Proveedor && this.modeloCaracter())
       (click)="openModal($index)"
       (keypress.enter)="openModal($index)"
       (keypress.space)="openModal($index)"
-      class="font-bold py-2 px-4 bg-blue-500 hover:bg-blue-600 text-white transition duration-300 ease-in-out transform hover:scale-105"
+      class="font-bold py-2 text-blue-500 transition duration-300 ease-in-out transform hover:scale-105"
     >
       Ver Más
     </a>
@@ -459,7 +459,7 @@ this.currentUser()?.rol?.nombreRol === Role.Proveedor && this.modeloCaracter())
       (click)="openModal($index)"
       (keypress.enter)="openModal($index)"
       (keypress.space)="openModal($index)"
-      class="font-bold py-2 px-4 bg-blue-500 hover:bg-blue-600 text-white transition duration-300 ease-in-out transform hover:scale-105"
+      class="font-bold py-2 text-blue-500 transition duration-300 ease-in-out transform hover:scale-105"
     >
       Ver Más
     </a>
@@ -611,7 +611,7 @@ this.currentUser()?.rol?.nombreRol === Role.Proveedor && this.modeloCaracter())
       (click)="openModal($index)"
       (keypress.enter)="openModal($index)"
       (keypress.space)="openModal($index)"
-      class="font-bold py-2 px-4 bg-blue-500 hover:bg-blue-600 text-white transition duration-300 ease-in-out transform hover:scale-105"
+      class="font-bold py-2 text-blue-500 transition duration-300 ease-in-out transform hover:scale-105"
     >
       Ver Más
     </a>
@@ -759,7 +759,7 @@ this.currentUser()?.rol?.nombreRol === Role.Proveedor && this.modeloCaracter())
       (click)="openModal($index)"
       (keypress.enter)="openModal($index)"
       (keypress.space)="openModal($index)"
-      class="font-bold py-2 px-4 bg-blue-500 hover:bg-blue-600 text-white transition duration-300 ease-in-out transform hover:scale-105"
+      class="font-bold py-2 text-blue-500 transition duration-300 ease-in-out transform hover:scale-105"
     >
       Ver Más
     </a>
@@ -906,7 +906,7 @@ this.currentUser()?.rol?.nombreRol === Role.Proveedor && this.modeloCaracter())
       (click)="openModal($index)"
       (keypress.enter)="openModal($index)"
       (keypress.space)="openModal($index)"
-      class="font-bold py-2 px-4 bg-blue-500 hover:bg-blue-600 text-white transition duration-300 ease-in-out transform hover:scale-105"
+      class="font-bold py-2 text-blue-500 transition duration-300 ease-in-out transform hover:scale-105"
     >
       Ver Más
     </a>
