--- a/src/app/v2/modules/podcasts/podcasts.component.html
+++ b/src/app/v2/modules/podcasts/podcasts.component.html
@@ -6,7 +6,7 @@
         <!-- Primer segmento: enlace a la página de Inicio -->
         <li class="inline-flex items-center">
           <a
-            routerLink="/"
+            href="/"
             class="inline-flex items-center text-sm font-bold transition-colors duration-300"
           >
             <!-- Icono de Inicio -->
@@ -32,7 +32,7 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            routerLink="/"
+            href="/"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
             Investigacion
@@ -53,7 +53,7 @@
           </svg>
           <!-- Enlace al segmento con ruta acumulativa -->
           <a
-            routerLink="/investigacion-podcasts"
+            href="/investigacion-podcasts"
             class="text-sm font-bold transition-colors duration-300 hover:text-gray-500"
           >
             Podcast
@@ -65,25 +65,19 @@
 </div>
 
 <!-- Header -->
-<header class="bg-blue-600">
-  <div class="container mx-auto px-4 py-6">
-    <h1 class="text-white text-4xl font-bold">
-      IA Podcasts de Nuevo Los Lagos
-    </h1>
-    <p class="text-blue-200 mt-2 text-lg">
-      Explora las tecnologías de la Industria 4.0 de forma innovadora
-    </p>
-  </div>
-</header>
+
+<!-- forked from: https://codepen.io/cuonoj/pen/JjPmMaB -->
+
+
 <!-- Contenido principal -->
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Sección de búsqueda y resultados -->
   <div class="w-full lg:w-3/4 pr8 p-8">
     <section class="mb-8">
-      <h2 class="text-2xl font-bold text-gray-800 mb-4">
+      <h1 class="text-4xl font-bold text-gray-800 mb-4 ">
         Bienvenidos a la sección de Podcasts de Nuevo Los Lagos
-      </h2>
-      <p class="text-gray-700 leading-relaxed mb-4">
+      </h1>
+      <p class="text-gray-700 leading-relaxed mb-4 text-justify">
         Estamos emocionados de presentarte una forma innovadora de acceder a
         información sobre las tecnologías de la Industria 4.0. Nuestros
         podcasts, generados por inteligencia artificial, están basados en
@@ -100,7 +94,7 @@
       <h2 class="text-2xl font-bold text-gray-800 mb-4">
         ¿Por qué hemos elegido el formato de podcast generado por IA?
       </h2>
-      <p class="text-gray-700 leading-relaxed mb-4">
+      <p class="text-gray-700 leading-relaxed mb-4 text-justify">
         Hemos optado por los podcasts generados por inteligencia artificial
         porque creemos en ofrecer contenido de forma accesible y conveniente.
         Este formato permite que nuestros usuarios accedan a información
@@ -116,7 +110,7 @@
       <h2 class="text-2xl font-bold text-gray-800 mb-4">
         ¿Cómo se desarrollan nuestros podcasts?
       </h2>
-      <p class="text-gray-700 leading-relaxed">
+      <p class="text-gray-700 leading-relaxed text-justify">
         Nuestros podcasts están basados en investigaciones detalladas y en
         entrevistas con expertos del sector. Utilizamos tecnología de
         inteligencia artificial avanzada para procesar esta información y
@@ -163,7 +157,7 @@
     </section>
   </div>
   <!-- Sección de artículos sugeridos -->
-  <aside class="w-full lg:w-1/4 mt-12 lg:mt-0">
+  <aside class="w-full lg:w-1/4 mt-12 lg:mt-0 pt-10">
     <app-sugeridos></app-sugeridos>
   </aside>
 </main>
